[package]
name = "le_longe"
version = "0.1.1"
authors = ["Exotic"]
edition = "2018"

[profile.release]
strip = "symbols"
opt-level = 3
debug = 0
lto = true
panic = "abort"
overflow-checks = true
debug-assertions = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"